--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translated",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Internationalization (i18n) and localization (l10n) library",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -57,10 +57,12 @@
   "license": "MIT",
   "dependencies": {
     "intl-messageformat": "^1.3.0",
+    "intl-relativeformat": "^1.3.0",
     "lodash.merge": "^4.6.0"
   },
   "devDependencies": {
     "ava": "^0.17.0",
-    "icu4c-data": "^0.57.2"
+    "icu4c-data": "^0.57.2",
+    "typescript": "^2.1.4"
   }
 }
