--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "translated",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Internationalization (i18n) and localization (l10n) library",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -30,6 +30,7 @@
     "l10n",
     "cldr",
     "g11n",
+    "intl",
     "translate",
     "translation",
     "translated",
